# final_year_project_2024

./: pyproject.toml
server/data/: Book1.csv  data_conversion.py  index.py  sim_data.json
